[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "0.2.0"
description = "Daily South African tech job aggregator for CodeSpace graduates"
readme = "README.md"
authors = [{name = "Monde Nel", email = "mondelnel1996@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tls-client>=0.3.0",
    "python-jobspy>=1.1.0",
    "pandas>=2.0.0",
    "gspread>=6.0.0",
    "oauth2client>=4.1.3",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-vcr>=1.0.0",
    "requests-mock>=1.11.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
job-scraper = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D107"]  # Docstring rules

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing"